# Catena

./: .clang-format  .gitignore  .gitmodules  .ninja_log  AddLanguage.html  BasicParamInfoRequest.html  CMakeCache.txt  CODEOWNERS.html  CONTRIBUTING.md  Catena.code-workspace  Connect.html  Constraints.html  DevContainer.html  DevProcess.html  DeviceModel.html  DeviceModel_8h.html  DeviceModel_8h.js  DeviceModel_8h__incl.map  DeviceRequest.html  ExecuteCommand.html  ExternalObjectRequest.html  Functory_8h.html  Functory_8h__dep__incl.map  Functory_8h__dep__incl.md5  Functory_8h__incl.md5  GenericFactoryExample_8cpp-example.html  GenericFactory_8h.html  GenericFactory_8h__dep__incl.md5  GenericFactory_8h__incl.md5  GetParam.html  GetPopulatedSlots.html  GetValue.html  Introduction.html  LICENSE.txt  LanguagePackRequest.html  ListLanguages.html  Meta_8h.js  Meta_8h__dep__incl.map  Meta_8h__dep__incl.md5  Meta_8h__incl.map  (+203 more)
sdks/cpp/: CMakeLists.txt  CatenaCodegen.cmake  CatenaFunctions.cmake  Catena_cppConfig.cmake.in  ProtobufFunctions.cmake  VERSION.txt  gRPC.cmake  proto_interface.cmake
sdks/cpp-lite/: CMakeLists.txt
sdks/cpp-lite/common/: CMakeLists.txt
sdks/cpp-lite/common/include/: Meta.h  Param.h  example.tiny.json.h
sdks/cpp-lite/common/src/: DeviceAccessor.cpp  example.tiny.json.cpp
sdks/cpp/cmake/: ConnectionTypes.cmake  ExternalDependencies.cmake  PlatformConfig.cmake  ProjectConfig.cmake
sdks/cpp/common/: CMakeLists.txt  gRPC.cmake  proto_interface.cmake
sdks/cpp/common/examples/: CMakeLists.txt  README.md
sdks/cpp/common/include/: ArrayAccessor.h  Authorization.h  Authorizer.h  AuthzInfo.h  CatenaExport.h  ChoiceConstraint.h  Config.h  ConnectionProps.h  Device.h  DeviceModel.h  Enums.h  Fake.h  Functory.h  GenericFactory.h  HTTPServer.h  IAuthorizer.h  IConstraint.h  IDevice.h  ILanguagePack.h  IMenu.h  IMenuGroup.h  INmosNode.h  IParam.h  IParamDescriptor.h  IParamVisitor.h  IPolyglotText.h  ISubscriptionManager.h  Import.h  LanguagePack.h  Logger.h  Menu.h  MenuGroup.h  Meta.h  NamedChoiceConstraint.h  NmosNode.h  Param.h  ParamAccessor.h  ParamDescriptor.h  ParamVisitor.h  ParamWithValue.h  (+18 more)
sdks/cpp/common/src/: Authorization.cpp  Authorizer.cpp  ChoiceConstraint.cpp  ConcreteArrayAccessor.cpp  Config.cpp  ConnectionProps.cpp  ConnectionQueue.cpp  Device.cpp  DeviceModel.cpp  Enums.cpp  HTTPServer.cpp  Heartbeat.cpp  Import.cpp  LanguagePack.cpp  Logger.cpp  Menu.cpp  MenuGroup.cpp  NmosNode.cpp  Param.cpp  ParamAccessor.cpp  ParamDescriptor.cpp  ParamVisitor.cpp  Path.cpp  PeerInfo.cpp  PicklistConstraint.cpp  PolyglotText.cpp  SharedFlags.cpp  StructInfo.cpp  SubscriptionManager.cpp  ValueAccessors.cpp  utils.cpp
sdks/cpp/common/tests/: .gitignore  Authorization_test.cpp  CMakeLists.txt  CommonMockClasses.h  CommonTestHelpers.h  Connect_test.cpp  Device_test.cpp  ParamAccessorTest.cpp  ParamWithValueTest.cpp  SetupTests.sh  param_visitor_test.cpp  subscription_manager_test.cpp  utils_test.cpp
sdks/cpp/connections/: CMakeLists.txt
sdks/cpp/connections/REST/: CMakeLists.txt
sdks/cpp/connections/catena_workshop/: CMakeLists.txt  catena_ghz_dockerfile  catena_performance_test_dockerfile  catena_workshop_compose.yml
sdks/cpp/connections/docker/: CMakeLists.txt  DockerFunctions.cmake  base_dockerfile  catena_envoy_dockerfile  catena_status_update_dockerfile  catena_structs_with_authz_dockerfile  catena_use_commands_dockerfile  catena_use_menus_dockerfile  envoy.yaml  grpc_compose.yml
sdks/cpp/connections/gRPC/: CMakeLists.txt
sdks/cpp/device/: device.one_of_everything.json.cpp  device.one_of_everything.json.h
sdks/cpp/docker/: Dockerfile  build.sh  dev-start.sh  docker-cpp.md  envoy-start.sh  envoy.yaml  envoy_template.yaml
sdks/cpp/docker/dockerfiles/: Dockerfile.base  Dockerfile.codeql  Dockerfile.develop  Dockerfile.toolchain
sdks/cpp/docs/: business_logic_access.md  config.md  cpp_sdk_main_page.md  cross_compiling.md  docker-cpp.md  doxyfile.in  linux_toolchain.md  macos_toolchain.md  native_types.md  windows_toolchain.md
sdks/cpp/full/: CMakeLists.txt
sdks/cpp/full/examples/: CMakeLists.txt
sdks/cpp/full/include/: ArrayAccessor.h  DeviceModel.h  JSON.h  ParamAccessor.h  Path.h  Reflect.h  ReflectionMacros.h  TypeTraits.h
sdks/cpp/full/src/: ConcreteArrayAccessor.cpp  DeviceModel.cpp  JSON.cpp  ParamAccessor.cpp  Path.cpp  PeerInfo.cpp
sdks/cpp/full/tests/: CMakeLists.txt  ParamAccessorTest.cpp
sdks/cpp/install_test/: CMakeLists.txt  Install_testing.md
sdks/cpp/install_test/status_update/: CMakeLists.txt  device.status_update.json  status_update.cpp
sdks/cpp/lite/: CMakeLists.txt
sdks/cpp/lite/examples/: CMakeLists.txt
sdks/cpp/lite/include/: AuthzInfo.h  Collection.h  Device.h  DeviceAccessor.h  DeviceModel.h  IConstraint.h  IParam.h  Language.h  LanguagePack.h  Menu.h  MenuGroup.h  NamedChoiceConstraint.h  NullConstraint.h  Param.h  ParamAccessor.h  ParamDescriptor.h  ParamWithValue.h  PicklistConstraint.h  PolyglotText.h  RangeConstraint.h  StructInfo.h  Tags.h  wibble.cpp
sdks/cpp/lite/src/: Device.cpp  DeviceModel.cpp  Language.cpp  LanguagePack.cpp  Menu.cpp  MenuGroup.cpp  Param.cpp  ParamDescriptor.cpp  PicklistConstraint.cpp  PolyglotText.cpp  StructInfo.cpp
unittests/cpp/REST/: CMakeLists.txt  RESTTest.h  RESTTestHelpers.h
unittests/cpp/REST/mocks/: MockServiceImpl.h  MockSocketReader.h
unittests/cpp/REST/tests/: AddLanguage_test.cpp  AssetRequest_test.cpp  BasicParamInfoRequest_test.cpp  Connect_test.cpp  DeviceRequest_test.cpp  ExecuteCommand_test.cpp  GetParam_test.cpp  GetPopulatedSlots_test.cpp  GetValue_test.cpp  LanguagePackRequest_test.cpp  LanguagePack_test.cpp  Languages_test.cpp  ListLanguages_test.cpp  MultiSetValue_test.cpp  ParamInfoRequest_test.cpp  ServiceImpl_test.cpp  SetValue_test.cpp  SocketReader_test.cpp  SocketWriter_test.cpp  Subscriptions_test.cpp
unittests/cpp/common/: CMakeLists.txt  CommonTestHelpers.h
unittests/cpp/common/mocks/: MockAuthorizer.h  MockCommandResponder.h  MockMenu.h  (+13 more)
unittests/cpp/gRPC/: CMakeLists.txt  GRPCTest.h  GRPCTestHelpers.h  StreamReader.h
(+4360 files in other folders)
